@@ -401,7 +401,7 @@ void Icmpv6L4Protocol::ReceiveLLA (Icmpv6OptionLinkLayerAddress lla, Ipv6Address
             }
           else
             {
-              if (!entry->IsReachable ())
+              if (!entry->IsReachable () || !entry->IsPermanent ())
                 {
                   entry->StopNudTimer ();
                   waiting = entry->MarkReachable (lla.GetAddress ());
@@ -412,7 +412,10 @@ void Icmpv6L4Protocol::ReceiveLLA (Icmpv6OptionLinkLayerAddress lla, Ipv6Address
                           cache->GetInterface ()->Send (*it, src);
                         }
                     }
-                  entry->StartReachableTimer ();
+                  if (!entry->IsPermanent ())
+                    {
+                      entry->StartReachableTimer ();
+                    }
                 }
             }
         }
@@ -708,7 +711,7 @@ void Icmpv6L4Protocol::HandleNA (Ptr<Packet> packet, Ipv6Address const &src, Ipv
 
               if (naHeader.GetFlagS ())
                 {
-                  if (!entry->IsReachable ())
+                  if (!entry->IsReachable () || !entry->IsPermanent ())
                     {
                       if (entry->IsProbe ())
                         {
@@ -724,7 +727,10 @@ void Icmpv6L4Protocol::HandleNA (Ptr<Packet> packet, Ipv6Address const &src, Ipv
                           entry->MarkReachable (lla.GetAddress ());
                         }
                     }
-                  entry->StartReachableTimer ();
+                  if (!entry->IsPermanent ())
+                    {
+                      entry->StartReachableTimer ();
+                    }
                 }
               else if (lla.GetAddress () != entry->GetMacAddress ())
                 {
@@ -1295,7 +1301,7 @@ bool Icmpv6L4Protocol::Lookup (Ipv6Address dst, Ptr<NetDevice> device, Ptr<Ndisc
       NdiscCache::Entry* entry = cache->Lookup (dst);
       if (entry)
         {
-          if (entry->IsReachable () || entry->IsDelay ())
+          if (entry->IsReachable () || entry->IsDelay () || entry->IsPermanent ())
             {
               *hardwareDestination = entry->GetMacAddress ();
               return true;
@@ -1329,7 +1335,7 @@ bool Icmpv6L4Protocol::Lookup (Ptr<Packet> p, Ipv6Address dst, Ptr<NetDevice> de
   NdiscCache::Entry* entry = cache->Lookup (dst);
   if (entry)
     {
-      if (entry->IsReachable () || entry->IsDelay ())
+      if (entry->IsReachable () || entry->IsDelay () || entry->IsPermanent ())
         {
           /* XXX check reachability time */
           /* send packet */
